<resources>
    <string name="app_name">ObjectDetectionApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!--    <string name="hello_blank_fragment">Hello blank fragment</string>-->
    <string name="take_photo">Take Photo</string>
    <string name="back_to_camera">Back to Camera</string>
    <string name="upload">Upload</string>
    <string name="image_preview">Image Preview</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="camera">Camera</string>
    <string name="image">Image</string>
    <string name="classified_as">Classified as:</string>
    <string name="confidence">Top 3 Confidences:</string>
    <string name="result_text">%1$s</string>
    <string name="instruction">Instruction</string>
    <string name="instruction_title">Instructions</string>

<string name="instruction_details">
        This is an image classification app. \n\n
        If you want to use the camera to identify an object,
        you can click on the "Camera" button and take a photo of the object.\n\n
        If you want to use an image you already saved on your device,
        you can click on the "Image Preview" button and upload the image.
    </string>
    <string name="back">Back</string>
    <!--    <string name="result_text">%1$s %2$d%%</string>-->

</resources>