<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DDFFEB3B"
    android:textAlignment="center"
    tools:context=".InstructionFragment">

    <TextView
        android:id="@+id/instructionTitle"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="0dp"
        android:background="#6750A3"
        android:text="@string/instruction_title"
        android:textColor="#FFFFFF"
        android:textSize="26sp"
        android:textStyle="bold"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/instructionTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="30dp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/instruction_details"
        android:textSize="24sp"
        android:gravity="center_vertical"
        android:justificationMode="inter_word"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/instructionTitle"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/backBtn"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginBottom="30dp"
        android:text="@string/back"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>